* Changed search results for MapPage to use DynamicMapPage instead * Gradle run config tweaks (now includes enable-native-access) * Added caching of SDE.zip checksum calculation